Mascotas with swagger
